UIEXT-1860: Fix flow variable support; cleanup
- cleans up the code a bit
- fixes flow variable handling, by not wrapping the conversion error in a missing cell; instead storing as string and parsing again on configure/execute
UIEXT-1860 (Iteration 2 row filter)